# shiftable-attention-poc

./: .gitignore  README.md  main.py  requirements.txt  run_stack.py  sma_controls_checklist_control.csv  sma_controls_checklist_template.csv  sma_test_checklist_results_set_1.csv
GRCLM/: GRCLM Example.md  GRCLM_full_paper.tex  references.bib
app/: api.py  config.py  domain_topology.py  emergence_tracker.py  model_manager.py  model_manager_orig.py  router.py
frontend/: index.html
shiftable_attention/: README.md  __init__.py  blocks.py  gate.py  pyproject.toml  sma.py
shiftable_attention/examples/: basic_usage.py
shiftable_project/: README.md  __init__.py  cli_generate_generalist.py  data.py  models.py  tokenizer.py  train_generalist.py  train_specialists.py
shiftable_project/data/prep/emergence/: README_emergent_expert_corpus.md  prepare_emergent_expert_corpus.py
shiftable_project/data/prep/general/: README.md  prepare_general_corpus.py
tensorboard/: README.txt  domain_centroids.tsv  domain_metadata.tsv  export_tensorboard_projector.py  plotly_embedding_mri.py  projector_config.pbtxt  query_embeddings.tsv  query_metadata.tsv
viz/: build_embedding_map.py  dash_embedding_viewer.py
